--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,8 @@
 /node_modules
 
 # production
-/build
+/dist
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 npm-debug.log*
