--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "sass": "^1.54.4",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
+    "svelte-navigator": "^3.2.2",
     "svelte-preprocess": "^4.10.7",
-    "svelte-routing": "^1.6.0",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
