--- a/public/project-info.json
+++ b/public/project-info.json
@@ -2,7 +2,7 @@
   {
     "type": "item",
     "title": "Personal Portfolio",
-    "description": "This very app right here. It is implemented using Svelte.",
+    "description": "This very app right here. It is implemented in Svelte.",
     "appUrl": "https://bernhard.haus",
     "repoUrl": "https://github.com/bhaeussermann/portfolio"
   },
@@ -20,28 +20,28 @@
       {
         "type": "item",
         "title": "App (Angular version)",
-        "description": "A simple CRUD application for managing employee details in a standard Northwind database. It is implemented using Angular and the Angular Material UI component library.",
+        "description": "A simple CRUD application for managing employee details in a standard Northwind database. It is implemented in Angular and the Angular Material UI component library.",
         "appUrl": "https://angular-northwind.onrender.com",
         "repoUrl": "https://github.com/bhaeussermann/angular-northwind"
       },
       {
         "type": "item",
         "title": "App (Vue.js version)",
-        "description": "A simple CRUD application for managing employee details in a standard Northwind database. It is implemented using Vue.js and the Buefy UI component library.",
+        "description": "A simple CRUD application for managing employee details in a standard Northwind database. It is implemented in Vue.js and the Buefy UI component library.",
         "appUrl": "https://vue-northwind.onrender.com",
         "repoUrl": "https://github.com/bhaeussermann/vue-northwind"
       },
       {
         "type": "item",
         "title": "App (Svelte version)",
-        "description": "A simple CRUD application for managing employee details in a standard Northwind database. It is implemented using Svelte and the Svelte Material UI component library.",
+        "description": "A simple CRUD application for managing employee details in a standard Northwind database. It is implemented in Svelte and the Svelte Material UI component library.",
         "appUrl": "https://svelte-northwind.onrender.com",
         "repoUrl": "https://github.com/bhaeussermann/svelte-northwind"
       },
       {
         "type": "item",
         "title": "App (Blazor version)",
-        "description": "A simple CRUD application for managing employee details in a standard Northwind database. It is implemented using Blazor and the Radzen component library.",
+        "description": "A simple CRUD application for managing employee details in a standard Northwind database. It is implemented in Blazor and the Radzen component library.",
         "appUrl": "https://blazor-northwind.azurewebsites.net",
         "repoUrl": "https://github.com/bhaeussermann/blazor-northwind"
       }
@@ -64,8 +64,15 @@
   {
     "type": "item",
     "title": "Elixir Naughts & Crosses",
-    "description": "A Naughts & Crosses (tic-tac-toe) app implemented using Elixir.",
+    "description": "A Naughts & Crosses (tic-tac-toe) app implemented in Elixir.",
     "appUrl": "https://elixir-naughts-and-crosses.onrender.com",
     "repoUrl": "https://github.com/bhaeussermann/elixir-naughts-and-crosses"
+  },
+  {
+    "type": "item",
+    "title": "Duration Adder",
+    "description": "A simple application implemented in Svelte for adding up hour-minute durations for filling in time sheets.",
+    "appUrl": "https://duration-adder.onrender.com",
+    "repoUrl": "https://github.com/bhaeussermann/duration-adder"
   }
 ]
